<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Post likes</string>
    <string name="description_post_views">Post views</string>
    <string name="description_post_shares">Post shares</string>
    <string name="description_post_text">Post text</string>
    <string name="menu_remove">Remove</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_mode_title">Editing</string>
    <string name="description_cancel_edit">Cansel edit</string>
    <string name="chooser_share_post">Share</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">Add post</string>
    <string name="description_post_video">Video</string>
    <string name="play">Play</string>
    <string name="error">Error</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="missing_action">No action in message: %1$s</string>
    <string name="unknown_action">Unknown action: %1$s</string>
    <string name="content_error">Error parsing content: %1$s</string>
    <string name="notification_new_post_title">%1$s published a new post:</string>


</resources>