<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/netology" />


    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"

        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"

        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Style.OptionsButton"
        android:layout_width="@dimen/posts_menu_size"
        android:layout_height="@dimen/posts_menu_size"
       app:icon="@drawable/ic_menu"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"

        app:layout_constraintBottom_toTopOf="@id/likesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        tools:text="@sample/posts.json/data/content" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published, menu" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/likesButton"
        style="@style/Style.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:checkable="true"
        android:checked="true"

        android:contentDescription="@string/description_post_likes"
        app:icon="@drawable/ic_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:text="1" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/sharesButton"
        style="@style/Style.ShareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/description_post_shares"
        app:icon="@drawable/ic_share"
        app:layout_constraintStart_toEndOf="@id/likesButton"
        app:layout_constraintTop_toTopOf="@id/likesButton"
        tools:text="1"/>



    <ImageButton
        android:id="@+id/viewsButton"
        android:layout_width="@dimen/posts_icon_size"
        android:layout_height="@dimen/posts_icon_size"
        android:layout_marginStart="24dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/description_post_views"
        android:src="@drawable/remove_red_eye_24dp_e3e3e3"
        app:layout_constraintStart_toEndOf="@id/sharesButton"
        app:layout_constraintTop_toTopOf="@id/likesButton" />


    <TextView
        android:id="@+id/viewsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@id/viewsButton"
        app:layout_constraintStart_toEndOf="@id/viewsButton"
        app:layout_constraintTop_toTopOf="@id/viewsButton"
        tools:text="10" />


</androidx.constraintlayout.widget.ConstraintLayout>